Updated Introduction, need to double check grammar

--- a/1introduction.tex
+++ b/1introduction.tex
@@ -1,5 +1,5 @@
 \chapter{Introduction}
-The use of video-based surveillance system is nothing new. Over the past decade, both private and public sectors benefitted from the ease of implementation along with the low implmentation cost.
+The use of video-based surveillance system is nothing new. Over the past decade, both private and public sectors benefited from the ease of implementation along with the low implementation cost.
 Retail stores, shopping malls, public places and private homes has equipped themselves with closed circuit television (CCTV) systems as a means for safety precaution.
 With the rise of such technology and coupled with the hype around the introduction of Internet of Things (IoT), Big Data and even Industry 4.0 over the recent years, there has been a deeper thirst among researchers in finding practical use case by bridging existing data with technology to bring about a new wave in the research field.
 
@@ -7,16 +7,17 @@ With the rise of such technology and coupled with the hype around the introducti
 \label{section:introduction}
 
 The growth of the surveillance industry has also brought forth the rise of constant streams of video data. According to a research done by the IHS Markit (a leading source of information, insights and analytics) claimed that by 2019, the average data generated daily by new surveillance camera shipped globally will grow up to 2,500 petabytes daily \cite{woodhouse2016big}.
-As you are reading, hundreds of thousand, if not millions of hours worth of video data are filling up database warehouses across the globe by the second. While these video footages are useful when it is needed, for example when dealing with a crime scene investigation, most of the time, these data are just stored and left unprocessed, taking up additional storage space while adding to the overhead cost.
+As you are reading, hundreds of thousand, if not millions of hours worth of video data are filling up database warehouses across the globe by the second. While these video footages are useful when it is needed (for example, when dealing with crime scene investigations), most of the time, these data are stored and left unprocessed, taking up additional storage space while compounding on the overhead cost.
 This \textit{'reactive-approach'} towards surveillance systems makes it slow and difficult for investigators when dealing with crime scenes.
 
-Looking from the another angle, the entertainment sector is also dishing out multimedia contents at a rather alarming rate. These digital contents are being pushed into data warehouses and consumed by the general public on a daily basis. Public sectors has also benefited from the rise of various video search engines and tools such as Google, YouTube, Dailymotion and Bing. However, it is unlikely for these existing technologies to be directly applied towards surveillance video footages. Nevertheless, the idea of using search engines to retrieve desired video footage is nothing new. Hence, inspirations were drawn from these technologies and applied into the research problem at hand. %which will be discussed in this work.
+Looking from the another angle, the entertainment sector is also dishing out multimedia contents at a rather alarming rate. These digital contents are being pushed into data warehouses and consumed by the general public on a daily basis. General public as a whole has also benefited from the rise of various video search engines and tools such as Google, YouTube, Dailymotion and Bing. However, it is unlikely for these existing technologies to be directly applied towards surveillance video footages and excel in finding the desired footages. Nevertheless, it is clear that the idea of using search engines to retrieve video footage is nothing new. Hence, inspirations were drawn from these technologies and applied into the research problem at hand. %which will be discussed in this work.
 
-All of these retrieval engine technologies have one thing in common - the underlying framework and concept. First, the process begins with extraction of video metadata such as title, description, filename, dates, subtitles and various other details that could assist in identifying these footage. Next, these videos are stored in the database along with the extracted metadata which can be used during the retrieval process. Finally, when a text-based query is issued, these video shots are retrieved and are then sorted in a way that best represents the query for the end users.
+All of the aforementioned retrieval engine technologies have one thing in common - the underlying concept. First, the process begins with extraction of video metadata such as title, description, filename, dates, subtitles and various other details that could assist in identifying these footage. Next, these videos are stored in the database along with the extracted metadata which can be used during the retrieval process. Finally, when a text-based query is issued, these video shots are retrieved and are then sorted in a way that best represents the query for the end users.
+However, as mentioned, this approach can not be directly applied towards surveillance video footage as the metadata such as title, description or even tags does not exist most of the time.
 
-However, as mentioned, this approach can not be directly applied towards surveillance video footage as the metadata such as title, description or even tags generally does not exist most of the time. Looking from the surveillance video footage standpoint, the traditional approach of finding a particular video from a huge collection is done manually. This process involves an inquirer/user who is looking for a particular scene or shot, and an person-in-charge who manages the video collection. Narrowing it down to the research topic in a car-park surveillance setting, the inquirer would typically need to provide vehicle specific \textbf{semantics} such as time, date, colour of the vehicle, vehicle registration number, and place of which an incident occurred. %In this work, these information are examples of what would be referred to as semantics.
+Now, from the surveillance video footage standpoint, the traditional approach of finding a particular video from a huge collection is done manually. This process typically involves an inquirer/user who is searching for a particular scene or shot, and one of more person-in-charge who manages the video collection. Narrowing further down to the research topic, in a car-park surveillance setting, the inquirer would typically need to provide vehicle specific \textbf{semantics} such as time, date, colour of the vehicle, vehicle registration number, and place of which an incident occurred. %In this work, these information are examples of what would be referred to as semantics.
 
-Next, the person-in-charge would have to sift through hours and hours of video in order to find several potential video footage that matches the provided information. This \textit{'reactive-approach'} towards incidents is undeniably slow and ineffective. The entire process is time consuming, laborious and monotonous in nature. While the task is potentially straightforward when there is only one intended video shot with clear-cut definitive time and date given; this process takes an enormous effort when the time and date is not given, or even in cases when all the video shots with similar properties are desired within a given time period. Evidently, there exist a gap which can be addressed using a \textit{'proactive-approach'} via well designed semantic extraction and retrieval techniques which this work attempts to address.
+Next, the person-in-charge would have to sift through hours and hours of video in order to find potential video footages that matches the provided information. This \textit{'reactive-approach'} towards incidents is undeniably slow and ineffective. The entire process is time consuming, laborious and monotonous in nature. While the task is potentially straightforward when there is only one intended video shot with clear-cut definitive time and date given; this process takes enormous effort when details such as the time and date is not given, or even in cases when all the video shots with similar properties are desired within a given time period. Evidently, there exist a gap which can be addressed using a \textit{'proactive-approach'} via a well designed semantic extraction and retrieval techniques which this work attempts to address.
 
 \section{Motivation, Problem Statements and Research Questions}
 
@@ -25,10 +26,10 @@ As described in the previous section, the traditional method used to retrieve de
 %explain what constitutes a good semantic extraction tool and a retrieval engine
 %\subsection{Motivation}
 
-At the rate of surveillance video data being collected by the second, employing human task force to manually extract information from the video data source will undoubtedly be time consuming and be extremely labour intensive.
-While not impossible, the simple act of watching the same scene over and over again from the video source will definitely put mental and physical strain on the task force. When considering the amount of legacy video data that has been collected over the years and the amount of insights it could offer, the time taken to analyse them manually would take too long. Thus, affecting and foregoing the chance of reaping the benefits from these past data.
+At the frightening collection rate of surveillance video data, employing human labour to manually extract information from the video data source will undoubtedly be time consuming and be extremely labour intensive.
+While not impossible, the simple act of watching the same scene over and over again from the video source will definitely put mental and physical strain on the task personnels. When considering the amount of legacy video data that has been collected over the years and the amount of insights it could offer, the time taken to analyse them manually would increases exponentially. Thus, affecting and foregoing the chance of reaping the benefits from these past data.
 
-With the disadvantages of performing these task manually etched in mind, the use of computer vision techniques to extract information from video data could potentially alleviate the burden. The use of such techniques is not a new idea, a generic Computer Vision task can be visualized using Figure \ref{fig:genericCV}. Works in regards to extracting vehicle-specific attributes can be found from the early 90's and it is still an ongoing research area. Looking from a wider scope, a bulk of these research has placed their focus on \textit{highway} \cite{yu2017improved, cao2016vehicle, arya2016real, liu2016highway, al2016adaptive}, and  \textit{intersections} \cite{meng2017traffic, choong2017modeling, ren2018learning} datasets. Among the rare few \cite{shi2017study, marmol2016quickspot, ling2017identifying} that works on a car park dataset, the primary objective tend to revolve around the availability of parking spots.
+With the disadvantages of performing these task manually etched in mind, deployable computer vision techniques to extract information from video data could potentially alleviate the burden. In fact, the use of such techniques is not new, a generic Computer Vision task can be visualized using Figure \ref{fig:genericCV}. Works in regards to extracting vehicle-specific attributes can be found from the early 90's and it is still an ongoing research area. Viewing from a wider scope, a bulk of these research has placed their focus on \textit{highway} \cite{yu2017improved, cao2016vehicle, arya2016real, liu2016highway, al2016adaptive}, and  \textit{intersections} \cite{meng2017traffic, choong2017modeling, ren2018learning} datasets. Among the rare few \cite{shi2017study, marmol2016quickspot, ling2017identifying} that works on a car park dataset, the primary objective tend to revolve around the availability of parking spots.
 
 \begin{figure}[!hbt]\centering
 \includegraphics[width=.8\textwidth]{image/general/simpleframe.png}
@@ -36,11 +37,12 @@ With the disadvantages of performing these task manually etched in mind, the use
 \label{fig:genericCV}
 \end{figure}
 
-The rise of technology has benefited researchers in the computer vision area greatly due to higher computational power and lower price points. The ability to churn out metadata from raw video footages quickly combined with the advantages of easily interpretable and meaningful semantics shows great potential for the commercialisation of such technology. Even so, there are still plenty of challenges and opportunities to improve on existing techniques. As mentioned in Section \ref{section:introduction}, existing popular video retrieval engines such as Youtube generally relies on keyword-based queries, however, there are also works that have developed example-based queries \cite{zhang2017car, liu2016large, castanon2016retrieval} to facilitate the retrieval process.
+The rise of technology has benefited researchers in the computer vision area greatly due to higher computational power at lower price points. The ability to churn out metadata from raw video footages quicker combined with the advantages of easily interpretable and meaningful semantics exhibits great commercial potential. Even so, there are still plenty of challenges and opportunities which are yet to be solved to improve on existing techniques. As mentioned in Section \ref{section:introduction}, existing popular video retrieval engines such as YouTube generally relies on keyword-based queries. Queries such as 'Selecting all vehicles entering from Entrance (A) and turning into Junction (B)' are ineffective as it may not capture the semantic content required by the end user.
 
-Example-based queries typically requires end users to provide inputs in the form of an image or sample of the desired output. While it is possible to provide a thumbnail image-example for different scenes (eg: beach, mountain, waterfall) and objects (eg: bicycle, pen, lipstick), this cannot be said so with surveillance video footages as these data are often similar throughout the recorded duration.
+Several authors attempted to solve this challenge by proposing the use of example-based queries \cite{zhang2017car, liu2016large, castanon2016retrieval} to facilitate the retrieval process.
+These queries typically require end users to provide inputs in the form of an image or sample of the desired output. While it is possible to provide a thumbnail image-example for different scenes (e.g., beach, mountain, waterfall) and objects (e.g., bicycle, pen, lipstick), this is difficult with surveillance video footages as these data are often similar throughout the recorded duration. Plus, it would be highly unlikely for end users to have a copy of the sample footage.
 
-In order to tackle the problem of interest, here are some research questions which will be addressed in this work:
+In order to tackle this research problem, here are some research questions which will be addressed in this work:
 \begin{enumerate}
 \item What ideology and concepts can we glean from existing techniques and take advantage of them for the sake of the topic of interest?
 \item How can we represent surveillance video footages in the form of semantics? What types of semantics can be extracted? How can these semantics be translated into something which is easily interpretable for the querying process?
@@ -54,16 +56,18 @@ The objectives of this thesis can be divided into two main interdependent entiti
 
 \begin{enumerate}
 %\item To adopt and leverage on existing video data representation, semantics extraction and retrieval methods to design a surveillance video semantics extraction and retrieval framework.
-\item To identify and extract suitable semantics which are easily interpretable while accurately describing car park surveillance events.
-\item To design video retrieval techniques that takes in user-described queries which are intuitive while reliably providing results fast and accurately.
+  \item To identify and \textit{extract suitable semantics} which are easily interpretable while accurately describing car park surveillance events.
+  \item To design \textit{video retrieval techniques} that takes in intuitive user-described queries to provide fast and accurate results.
 \end{enumerate}
 
-\subsection{Scope of Thesis and Expected Outcome}
+\subsection{Scope and Definition}
 \label{subsec:scope}
-The work in this thesis encompasses tasks found in a generic computer vision vehicle semantic extraction and retrieval framework as illustrated in Figure \ref{fig:framework}. The preliminary task of detecting, tracking and obtaining the bounding box of each vehicle is assumed to be obtained prior to the semantic extraction task.
-Hence, the task of extracting semantics from the vehicles and the task of retrieving video footages are the central emphasis in this work. Here, the phrase 'long-term' is used to refer to the duration (one month) of videos in which the vehicle semantics were extracted and retrieved from.
+The work in this thesis encompasses tasks found in a generic computer vision vehicle semantic extraction and retrieval framework as illustrated in Figure \ref{fig:framework}. The preliminary task of detecting, tracking and obtaining the \textit{bounding box} of each vehicle is assumed to be \textbf{obtained} prior to the semantic extraction task.
+Hence, the task of \textit{extracting semantics} from the vehicles and the task of \textit{retrieving video footages} are the \textbf{central emphasis} in this work.
+As most of the existing works only used a couple of hours/days in their dataset, in this work, the phrase \textbf{'long-term'} is used to refer to the duration (one month) of videos in which the vehicle semantics were extracted and retrieved from. Based on my study, the largest dataset in related works used up to 500 hours to count the number of different trajectories.
 
-The scope of this work is further constrained to surveillance video footages taken from a single dataset. This dataset contains videos from a single camera with a stationary viewpoint (see Section \ref{section:dataset_used}). To further clarify the intent of this work, vehicle specific attributes are referred to as 'semantics'. This includes vehicle colour, trajectory, time and date of spotting the vehicle as well as location of vehicle in the scene. However, this does not include vehicle semantics such as vehicle brand, car segment (e.g.: sedan, hatchback, etc), and travelling speed. The extraction of scene semantics such as weather information, lighting condition and overall car park occupancy rate are also out of the scope of this work.
+
+The scope of this work is further constrained to surveillance video footages taken from a \textit{single dataset}. This dataset contains videos captured from a single camera with a \textit{stationary viewpoint} (see Section \ref{section:dataset_used}). To further clarify the intent of this work, vehicle specific attributes are referred to as 'semantics'. This includes vehicle colour, trajectory, time and date of spotting the vehicle as well as location of vehicle in the scene. However, this does not include vehicle semantics such as vehicle brand, car segment (e.g.: sedan, hatchback, etc), and travelling speed. The extraction of scene semantics such as weather information, lighting condition and overall car park occupancy rate are also out of the scope of this work.
 
 
 \subsection{Contribution}
