--- a/1introduction.tex
+++ b/1introduction.tex
@@ -82,11 +82,11 @@ As this thesis comprise of a collection framework, formulation of concepts and a
 \subsection{Organisation of Thesis}
 
 The road-map of this thesis is laid out as follow: First, the introduction on the subject matter is discussed in this chapter.
-In Chapter \ref{section:litreview}, first a brief overview of related theoretical background concepts is dicussed in Section \ref{subsec:relatedConcepts}. Then, in Section \ref{section:relatedworks}, related works in this research field are reviewed thoroughly to provide an understanding on what has been tried and solved, disadvantages along with potential areas of improvements that could be addressed.
+In Chapter \ref{section:litreview}, first a brief overview of related theoretical background concepts is discussed in Section \ref{subsec:relatedConcepts}. Then, in Section \ref{section:relatedworks}, related works in this research field are reviewed thoroughly to provide an understanding on what has been tried and solved, disadvantages along with potential areas of improvements that could be addressed.
 In Chapter \ref{chapter:framework}, an overview of the proposed method's framework, dataset along with the experimental methodologies is described.
 Chapter \ref{section:semanticsextraction} and Chapter \ref{section:retrievalengine} describes both the main components: i) \textbf{Semantics Extraction} and ii) \textbf{Semantics Retrieval}, however, the organization within these Chapters were divided into two cascaded phases.
 Figure \ref{fig:proposedmethodoverview} illustrates these two phases.
-Chapter \ref{section:semanticsextraction} focuses on the video semantics extraction methods for both the vehicle colour and vehicle motion, while Chapter \ref{section:retrievalengine} discusses the proposed retrival techniques along with the results and analysis.
+Chapter \ref{section:semanticsextraction} focuses on the video semantics extraction methods for both the vehicle colour and vehicle motion, while Chapter \ref{section:retrievalengine} discusses the proposed retrieval techniques along with the results and analysis.
 Finally, the conclusion of this work along with potential future works is prepared in Chapter \ref{section:conclusion}.
 
 
