Added in minimap, chapter 5

--- a/5retrieval-module.tex
+++ b/5retrieval-module.tex
@@ -447,20 +447,20 @@ For simple trajectories, the Precision@K scores a high 100\% at the beginning an
 % Please add the following required packages to your document preamble:
 % \usepackage{multirow}
 \begin{table}[!ht] \centering
-\begin{tabular}{|c|l|}
+\begin{tabular}{|c|c|c|}
 \hline
-\multicolumn{1}{|l|}{\textbf{Trajectory Category}} & \textbf{Query Number} \\ \hline
-\multirow{5}{*}{Simple} & Query 4 \\ \cline{2-2}
- & Query 5 \\ \cline{2-2}
- & Query 7 \\ \cline{2-2}
- & Query 8 \\ \cline{2-2}
- & Query 10 \\ \hline
-\multirow{6}{*}{Complex} & Query 1 \\ \cline{2-2}
- & Query 2 \\ \cline{2-2}
- & Query 3 \\ \cline{2-2}
- & Query 6 \\ \cline{2-2}
- & Query 9 \\ \cline{2-2}
- & Query 11 \\ \hline
+\multicolumn{1}{|c|}{\textbf{Trajectory Category}} & \textbf{Query Number} & \textbf{Query Minimap}\\ \hline
+\multirow{5}{*}{Simple} & Query 4 & \includegraphics{image/minimaps/query_04.png} \\ \cline{2-3}
+ & Query 5 & \includegraphics{image/minimaps/query_05.png} \\ \cline{2-3}
+ & Query 7 & \includegraphics{image/minimaps/query_07.png} \\ \cline{2-3}
+ & Query 8 & \includegraphics{image/minimaps/query_08.png} \\ \cline{2-3}
+ & Query 10 & \includegraphics{image/minimaps/query_10.png} \\ \hline
+\multirow{6}{*}{Complex} & Query 1 & \includegraphics{image/minimaps/query_01.png} \\ \cline{2-3}
+ & Query 2 & \includegraphics{image/minimaps/query_02.png} \\ \cline{2-3}
+ & Query 3 & \includegraphics{image/minimaps/query_03.png} \\ \cline{2-3}
+ & Query 6 & \includegraphics{image/minimaps/query_06.png} \\ \cline{2-3}
+ & Query 9 & \includegraphics{image/minimaps/query_09.png} \\ \cline{2-3}
+ & Query 11 & \includegraphics{image/minimaps/query_11.png} \\ \hline
 \end{tabular}
 \caption{Queries and the Corresponding Trajectory Type}
 \label{table:versionTwoComplexSimple}
